--- a/ComputerStore/App.config
+++ b/ComputerStore/App.config
@@ -7,6 +7,7 @@
   <connectionStrings>
     <add name="ComputerStore.Properties.Settings.ComputerStoreConnectionString" connectionString="Data Source=DESKTOP-G0U3V2A\SQLEXPRESS;Initial Catalog=ComputerStore;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ComputerStoreEntities" connectionString="metadata=res://*/ComputerStoreDB.csdl|res://*/ComputerStoreDB.ssdl|res://*/ComputerStoreDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-G0U3V2A\SQLEXPRESS;initial catalog=ComputerStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ComputerStoreEntities1" connectionString="metadata=res://*/ComputerStore.csdl|res://*/ComputerStore.ssdl|res://*/ComputerStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-G0U3V2A\SQLEXPRESS;initial catalog=ComputerStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
