--- a/ComputerStore/ComputerStore.csproj
+++ b/ComputerStore/ComputerStore.csproj
@@ -55,23 +55,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ComputerStoreDB.Context.cs">
+    <Compile Include="ComputerStore.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ComputerStoreDB.Context.tt</DependentUpon>
+      <DependentUpon>ComputerStore.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="ComputerStoreDB.cs">
+    <Compile Include="ComputerStore.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ComputerStoreDB.tt</DependentUpon>
+      <DependentUpon>ComputerStore.tt</DependentUpon>
     </Compile>
-    <Compile Include="ComputerStoreDB.Designer.cs">
+    <Compile Include="ComputerStore.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ComputerStoreDB.edmx</DependentUpon>
+      <DependentUpon>ComputerStore.edmx</DependentUpon>
     </Compile>
     <Compile Include="Customers.cs">
-      <DependentUpon>ComputerStoreDB.tt</DependentUpon>
+      <DependentUpon>ComputerStore.tt</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -104,15 +104,15 @@
       <DependentUpon>FormStuff.cs</DependentUpon>
     </Compile>
     <Compile Include="Orders.cs">
-      <DependentUpon>ComputerStoreDB.tt</DependentUpon>
+      <DependentUpon>ComputerStore.tt</DependentUpon>
     </Compile>
     <Compile Include="Products.cs">
-      <DependentUpon>ComputerStoreDB.tt</DependentUpon>
+      <DependentUpon>ComputerStore.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stuff.cs">
-      <DependentUpon>ComputerStoreDB.tt</DependentUpon>
+      <DependentUpon>ComputerStore.tt</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -138,12 +138,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EntityDeploy Include="ComputerStoreDB.edmx">
+    <EntityDeploy Include="ComputerStore.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ComputerStoreDB.Designer.cs</LastGenOutput>
+      <LastGenOutput>ComputerStore.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="ComputerStoreDB.edmx.diagram">
-      <DependentUpon>ComputerStoreDB.edmx</DependentUpon>
+    <None Include="ComputerStore.edmx.diagram">
+      <DependentUpon>ComputerStore.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -160,19 +160,19 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ComputerStoreDB.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ComputerStoreDB.Context.cs</LastGenOutput>
-      <DependentUpon>ComputerStoreDB.edmx</DependentUpon>
-    </Content>
-    <Content Include="ComputerStoreDB.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ComputerStoreDB.edmx</DependentUpon>
-      <LastGenOutput>ComputerStoreDB.cs</LastGenOutput>
-    </Content>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <Content Include="ComputerStore.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ComputerStore.edmx</DependentUpon>
+      <LastGenOutput>ComputerStore.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="ComputerStore.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ComputerStore.edmx</DependentUpon>
+      <LastGenOutput>ComputerStore.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
